<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">BigBlueButton</string>
	<string name="protocol">bigbluebutton</string>
	<string name="login_name">Name:</string>
	<string name="login_button_join">Join</string>
	<string name="login_empty_name">Empty username</string>
	<string name="login_select_meeting">Please select a meeting</string>
	<string name="login_cant_join">Can\'t join the meeting</string>
	<string name="login_updating">Updating meeting list</string>
	<string name="login_cant_contact_server">Can\'t contact the server. Try it later</string>
	<string name="login_unsupported_server">The server doesn\'t provide mobile access</string>
	<string name="wait">Please wait</string>
	<string name="welcome">Welcome</string>
	<string name="cancel">Cancel</string>
	<string name="you">you</string>
	<string name="send_message">Send</string>
	<string name="list_participants">List of participants</string>
	<string name="list_listeners">List of listeners</string>
	<string name="public_chat">Public chat</string>
	<string name="meeting">Meeting:</string>
	<string name="choose_server">Choose a server to connect:</string>
	<string name="connect">Connect</string>
	<string name="type_server">Or type a server URL:</string>
	<string name="choose_a_server">Choose a server</string>
	<string name="delete_server">Delete server</string>
	<string name="kick">Kick</string>
	<string name="mute">Mute</string>
	<string name="unmute">Unmute</string>
	<string name="assign_presenter">Assign presenter</string>
	<string name="not_implemented">Not implemented feature</string>
	<string name="speaker">Loudspeaker</string>
	<string name="start_voice">Start voice</string>
	<string name="stop_voice">Stop voice</string>
	<string name="start_video">Start video</string>
	<string name="stop_video">Stop video</string>
    <string name="publishing_video">Your camera is being published to the session</string>
	<string name="quit">Quit</string>
	<string name="minimize">Minimize</string>
	<string name="logout">Logout</string>
	<string name="raise_hand">Raise hand</string>
	<string name="lower_hand">Lower hand</string>
	<string name="open_private_chat">Open private chat</string>
	<string name="lost_connection">Lost connection</string>
	<string name="attempting_to_reconnect">Reconnecting...</string>
	<string name="private_chat_notification">New private chat message from&#160;</string>
	<string name="public_chat_notification">New public chat message from&#160;</string>
	<string name="private_chat_title">Private chat with&#160;</string>
	<string name="close_chat">Close chat</string>
	<string name="connection_established">Connection established</string>
	<string name="connection_closed">Connection closed</string>
	<string name="connection_refused">Connection refused</string>
	<string name="error">Error</string>
	<string name="invalid_number">isn\'t a valid VoIP number</string>
	<string name="no_options">No options avaiable</string>
	<string name="not_moderator">You don\'t have enough permission</string>
	<string name="cant_reconnect">Can\'t reconnect. Check your internet connection</string>
	<string name="reconnected">Successfully reconnected</string>
	<string name="reconnect">Reconnect</string>
	<string name="no_connection">No internet connection</string>
	<string name="open_properties">Open network properties?</string>
	<string name="choose_a_server_to_login">Choose a server to login</string>
	<string name="kicked">You have been kicked</string>
	<string name="new_meeting">Create new meeting</string>
	<string name="create">Create</string>
	<string name="taptospeak">Tap to speak</string>
	<string name="lockspeak">Lock speak</string>
	<string name="ok">OK</string>
	<string name="participant_left">User has disconnected. Closing the chat</string>
	<string name="user_disconnected">User has disconnected</string>
	<string name="mute_room">Mute room</string>
	<string name="unmute_room">Unmute room</string>
	<string name="qrcode">QR code</string>
	<string name="login_in">Log in</string>
	<string name="install_bar_code">Install Barcode Scanner?</string>
	<string name="bar_code_no_found">Barcode Scanner not found, install?</string>
	<string name="show_video">Show video</string>
	<string name="application_on_background">BigBlueButton</string>
	<string name="application_on_background_text">The application is still running</string>
	<string name="back_pressed">Key \"Back\" pressed</string>
	<string name="back_pressed_action">Which action do you want to take?</string>
    <string name="server">Server</string>
	<string name="meeting_information">Meeting information</string>
	<string name="meeting_id">Meeting ID</string>
	<string name="meeting_message">Meeting message</string>
	<string name="start_time">Start time</string>
	<string name="participant_count">Participant count</string>
	<string name="moderator_count">Moderator count</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="remember">Remember me</string>
	<string name="rooms">Rooms</string>
	<string name="no_rooms">No rooms available</string>
	<string name="invalid_password">Invalid username and/or password</string>
	<string name="select_room">Please select a room</string>
	<string name="invalid_room">Invalid room</string>
	<string name="cant_join">You can\'t join the meeting this moment</string>
	<string name="rooms_user">User rooms</string>
	<string name="rooms_user_spaces">Rooms from user spaces</string>
	<string name="rooms_public_spaces">Rooms from public spaces</string>
	<string name="dont_have_account">Don\'t you have an account? Click here!</string>
    <string name="no_running_meeting">You must wait for a moderator to join</string>
	<string name="about">
BBB-Android is an Android implementation of the BigBlueButton client.
\nVersion ${VERSION}
\n
\nIt was developed by PRAV Labs as part of the GT-Mconf project (http://inf.ufrgs.br/prav/gtmconf).
\n
\nThe source code is licensed under the GNU General Public License (GPL) and it is available at https://github.com/mconf.
\n
\nThe audio implementation is based on Sipdroid, an open-source SIP client for Android (http://sipdroid.org).
\n
\nIt uses Flazr, a Java implementation of multimedia streaming protocols (http://flazr.com).
\n
\nIt uses BBB-Java, a client-side Java API for BigBlueButton.
	</string>
	<string name="moderator">Moderator</string>
	<string name="viewer">Viewer</string>
	<string name="close">Close</string>
	<string name="audio_config">Audio configuration</string>
	<string name="speaker_volume">Speaker volume</string>
	<string name="earphone_volume">Earphone volume</string>
	<string name="mic_gain">Microphone gain</string>
<string name="pstn_name">Phone Call</string>
<string name="sip_name">Sipdroid Call, when available</string>
<string name="reg">Registering...</string>
<string name="regpref">Preferred</string>
<string name="regclick">Click to select</string>
<string name="regfailed">Registration failed</string>
<string name="voicemail">Message(s) Waiting</string>
<string name="auto_enabled">Auto-Answer/Speakerphone</string>
<string name="auto_disabled">Auto-Answer off</string>
<string name="hint">Called Party Address</string>
<string name="hint2">Phone Number</string>
<string name="empty">Please enter called party address as name@domain.com</string>
<string name="notfast">No suitable data network available</string>
<string name="settings_account">SIP Account</string>
<string name="settings_line">Line</string>
<string name="settings_username">Authorization Username</string>
<string name="settings_password">Password</string>
<string name="settings_server">Server or Proxy</string>
<string name="settings_domain">Domain</string>
<string name="settings_domain2">Leave empty if same as server</string>
<string name="settings_username1">Username or Caller ID</string>
<string name="settings_callerid2">Leave empty if same as authorization username</string>
<string name="settings_port">Port</string>
	<string-array name="port_display_values">
		<item>53</item>
		<item>69</item>
		<item>80</item>
		<item>135</item>
		<item>161</item>
		<item>443</item>
		<item>500</item>
		<item>1433</item>
		<item>1701</item>
		<item>1812</item>
		<item>3389</item>
		<item>4500</item>
		<item>5060 (standard)</item>
		<item>5061</item>
		<item>5900</item>
		<item>16999</item>
		<item>26999</item>
		<item>36999</item>
		<item>custom</item>
	</string-array>
	<string-array name="port_values">
		<item>53</item>
		<item>69</item>
		<item>80</item>
		<item>135</item>
		<item>161</item>
		<item>443</item>
		<item>500</item>
		<item>1433</item>
		<item>1701</item>
		<item>1812</item>
		<item>3389</item>
		<item>4500</item>
		<item>5060</item>
		<item>5061</item>
		<item>5900</item>
		<item>16999</item>
		<item>26999</item>
		<item>36999</item>
		<item>0</item>
	</string-array>
<string name="settings_protocol">Protocol</string>
    <string-array name="protocol_display_values">
        <item>UDP (less standby on 3G)</item>
        <item>TCP (longer standby on 3G)</item>
    </string-array>
    <string-array name="protocol_values">
        <item>udp</item>
        <item>tcp</item>
    </string-array>
<string name="settings_vquality">Video Quality</string>
    <string-array name="vquality_display_values">
        <item>High (352x288 @ 360kbit)</item>
        <item>Low (176x144 @ 192kbit)</item>
    </string-array>
    <string-array name="vquality_values">
        <item>high</item>
        <item>low</item>
    </string-array>
<string name="settings_stun">Use STUN Server</string>
<string name="settings_stun_server">STUN Server name</string>
<string name="settings_stun_server_port">STUN Server port</string>
<string name="settings_mmtel">Use MMTel flavor</string>
<string name="settings_mmtel_qvalue">Q value</string>
<string name="settings_options">Call Options</string>
<string name="settings_wlan">Use WLAN</string>
<string name="settings_3g">Use 3G</string>
<string name="settings_edge">Use EDGE</string>
<string name="settings_vpn">Use VPN</string>
<string name="settings_check">Check with your mobile operator if he allows VoIP</string>
<string name="settings_vpn2">PBXes offers free VPN service, see PBXes >> HELP</string>
<string name="dialog_default">Sipdroid is not currently set as default phone. Would you like to make it as default phone?
\n
\nIf you answer \'No\' here, you can still dial over Sipdroid from the system by adding \'+\' behind a number in Dialer, or by selecting \'text to\' in Contacts.</string>
<string name="dialog_message">Would you like to see a message from Pascal introducing Sipdroid 1.5?</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="dontask">Don\'t ask me again</string>
<string name="settings_pref">Preferred Call Type</string>
<string name="settings_pref2">Override by adding \'+\' behind a number in Dialer, or by selecting \'text to\' in Contacts</string>
    <string-array name="pref_display_values">
        <item>Sipdroid only</item>
        <item>Sipdroid, when available</item>
        <item>Phone</item>
        <item>Always ask</item>
    </string-array>
    <string-array name="pref_values">
        <item>SIPONLY</item>
        <item>SIP</item>
        <item>PSTN</item>
        <item>ASK</item>
    </string-array>
<string name="settings_compression">Voice Compression</string>
    <string-array name="compression_display_values">
        <item>Only over WLAN</item>
        <item>Only over WLAN and 3G</item>
        <item>Always try</item>
        <item>Never</item>
    </string-array>
    <string-array name="compression_values">
        <item>wlan</item>
        <item>wlanor3g</item>
        <item>always</item>
        <item>never</item>
    </string-array>
<string name="settings_auto_on">Auto-Answer in use</string>
<string name="settings_auto_on2">Short vibrating alert when screen is on</string>
<string name="settings_auto_ondemand">Auto-Answer on demand</string>
</resources>